Fixed spacing for icons, updated readme with correct link to Instructor Github! Verson 1.0 dcomplete!

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -154,6 +154,7 @@ footer a:hover {
 
 .icons {
     padding: 0 15%;
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
